# HelloOpenCGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  kernel.cl  main.cpp
